welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:6: error: type mismatch;
 found   : Int
 required: String
		case _ => return a
                                 ^